force-app/main/default/objects/Portal_User_Group__c/Portal_User_Group__c.object-meta.xml
<CustomObject>
    <description>Governs portal user roles within an Account — enables Account Admin and Standard User distinction within Experience Cloud. OWD is Controlled by Parent via Master-Detail to Account. Core layer object — present in all verticals. Do not modify from a vertical branch.</description>
    <label>Portal User Group</label>
    <nameField>
        <label>Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Portal User Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>