force-app/main/default/objects/Portal_User_Group__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Master-detail relationship to the Account this portal user group belongs to. Drives OWD sharing (Controlled by Parent).</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Portal User Groups</relationshipLabel>
    <relationshipName>Portal_User_Groups</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>