force-app/main/default/objects/Portal_User_Group__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact (portal user) who belongs to this group. Links the Experience Cloud user persona to their role assignment.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Portal User Groups</relationshipLabel>
    <relationshipName>Portal_User_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>