force-app/main/default/objects/Portal_User_Group__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether this portal user group membership is currently active. Used by portal data isolation logic to filter access.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>