force-app/main/default/objects/Portal_User_Group__c/fields/Last_Login__c.field-meta.xml
<CustomField>
    <fullName>Last_Login__c</fullName>
    <description>Date and time of the contact's most recent authenticated portal session. Populated by the Experience Cloud login flow.</description>
    <label>Last Login</label>
    <type>DateTime</type>
</CustomField>