force-app/main/default/objects/Portal_User_Group__c/fields/Portal_Role__c.field-meta.xml
<CustomField>
    <fullName>Portal_Role__c</fullName>
    <description>Role of the portal user within their Account. Account Admin can manage other portal users; Standard User has self-service access only.</description>
    <label>Portal Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account Admin</fullName>
            </value>
            <value>
                <fullName>Standard User</fullName>
                <default>true</default>
                <label>Standard User</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>